--- a/asyncTasks/tasks.ini
+++ b/asyncTasks/tasks.ini
@@ -1,9 +1,13 @@
+[make-clean]
+command=make clean -f ~/.config/nvim/MakefileTemplate/Makefile
+output=terminal
+save=2
 [make]
 command=make -f ~/.config/nvim/MakefileTemplate/Makefile
 output=terminal
 save=2
 [file-build]
-command:cpp=g++ -O2 -Wall "$(VIM_FILEPATH)" -o "$(VIM_PATHNOEXT)" -lstdc++ -lm -msse3
+command:cpp=g++ -O2 -Wall -std=c++17 "$(VIM_FILEPATH)" -o "$(VIM_PATHNOEXT)" -lstdc++ -lm -msse3
 command:go=go build -o "$(VIM_PATHNOEXT)" "$(VIM_FILEPATH)"
 command:make=make -f "$(VIM_FILEPATH)"
 output=terminal
