--- a/asyncTasks/tasks.ini
+++ b/asyncTasks/tasks.ini
@@ -15,7 +15,7 @@ cwd=$(VIM_FILEDIR)
 save=2
 [file-run]
 command="$(VIM_FILEPATH)"
-command:c,cpp="$(VIM_PATHNOEXT)"
+command:c,cpp=time "$(VIM_PATHNOEXT)"
 command:go="$(VIM_PATHNOEXT)"
 command:python=python "$(VIM_FILENAME)"
 command:make=make -f "$(VIM_FILENAME)" run
